# rbdl

./: .clang-format  .editorconfig  .gitignore  .hgignore  .mailmap  .travis.yml  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Jenkinsfile  LICENSE  README  README.md  rbdl.pc.cmake
.github/workflows/: rbdl.yml
CMake/: FindCasadi.cmake  FindIPOPT.cmake  FindNumPy2.cmake  FindNumPy3.cmake  FindUnitTest++.cmake  UseCython.cmake
addons/balance/: BalanceToolkit.cc  BalanceToolkit.h  CMakeLists.txt  balance.h
addons/balance/tests/: CMakeLists.txt  testBalanceToolkit.cc
addons/benchmark/: CMakeLists.txt  Human36Model.cc  Human36Model.h  SampleData.h  Timer.h  benchmark.cc  model_generator.cc  model_generator.h
addons/casadi/: CMakeLists.txt
addons/geometry/: CMakeLists.txt  Function.h  LICENSE  README.md  SegmentedQuinticBezierToolkit.cc  SegmentedQuinticBezierToolkit.h  SmoothSegmentedFunction.cc  SmoothSegmentedFunction.h  geometry.h
addons/geometry/tests/: CMakeLists.txt  numericalTestFunctions.cc  numericalTestFunctions.h  testSmoothSegmentedFunction.cc
addons/luamodel/: CMakeLists.txt  README  complexmodel.lua  config.h  luamodel.cc  luamodel.h  luastructs.h  luatables.cc  luatables.h  luatypes.h  rbdl_luamodel.cc  rbdl_luamodel.h  rbdl_luamodel_test.cc  rbdl_luamodel_util.cc  sampleconstrainedmodel.lua  samplemodel.lua  samplemodelwithtorquemuscles.lua
addons/luamodel/tests/: CMakeLists.txt  testLuaModel.cc
addons/muscle/: CMakeLists.txt  LICENSE  Millard2016TorqueMuscle.cc  Millard2016TorqueMuscle.h  MuscleFunctionFactory.cc  MuscleFunctionFactory.h  README.md  TorqueMuscleFittingToolkit.cc  TorqueMuscleFittingToolkit.h  TorqueMuscleFunctionFactory.cc  TorqueMuscleFunctionFactory.h  csvtools.cc  muscle.h
addons/muscle/tests/: CMakeLists.txt  TorqueMuscleFittingToolkitHardTestCase_TimeQQDotTau.csv  testMillard2016TorqueMuscle.cc  testMuscleFunctionFactory.cc  testTorqueMuscleFunctionFactory.cc
addons/urdfreader/: CMakeLists.txt  README  README.md  rbdl_urdf_test.cc  rbdl_urdfreader.cc  rbdl_urdfreader.h  rbdl_urdfreader_util.cc  test.urdf  tiago_dual-test.urdf  urdfreader.cc  urdfreader.h
addons/urdfreader/CMake/: FindURDF.cmake  ros.cmake
addons/urdfreader/tests/: CMakeLists.txt  testURDF.cc
addons/xmlreader/: CMakeLists.txt  rbdl_xmlreader.cc  rbdl_xmlreader.h
casadi/: CMakeLists.txt  info.h
casadi/addons/luamodel/: CMakeLists.txt
casadi/addons/urdfreader/: CMakeLists.txt
doc/: Mainpage.h  api_changes.txt  codingstyle.md  example.h  python_example.h
doc/notes/: point_velocity_acceleration.tex
example/: FindRBDL.cmake  example.cc
examples/: CMakeLists.txt  README.md  example.cc
examples/bouncingBall/: CMakeLists.txt
examples/casadi_simple/: CMakeLists.txt  FindCasadi.cmake  example.cc
examples/constrainedDoublePendulum/: CMakeLists.txt  README.md
examples/luamodel/: CMakeLists.txt  FindRBDL.cmake  example_luamodel.cc  sampleconstrainedmodel.lua  samplemodel.lua
examples/pendulum/: CMakeLists.txt  README.md
examples/python/: rbdl_python_example.py
examples/simple/: CMakeLists.txt  FindRBDL.cmake  example.cc
examples/urdfreader/: CMakeLists.txt  FindRBDL.cmake  example_urdfreader.cc  nao.urdf
examples/walkingInverseDynamicsWithPython/: README.md
gui/: CMakeLists.txt
gui/CMake/: FindUnitTest++.cmake
gui/src/: abaQtApp.cc  abaQtApp.h  glprimitives.cc  glprimitives.h  glwidget.cc  glwidget.h  modeldrawing.cc  modeldrawing.h  modelstate.cc  modelstate.h  qtmain.cc  rbdlQtApp.cc  rbdlQtApp.h
gui/ui/: abaMainWindow.ui  rbdlMainWindow.ui
include/rbdl/: Body.h  Constraint.h  Constraint_BodyToGroundPosition.h  Constraint_Contact.h  Contacts.h  (+21 more)
python/: CMakeLists.txt  ICustomJoint.cpp  README.md  crbdl.pxd  crbdlmuscle.pxd  rbdl-wrapper.pyx  rbdl.pxd  rbdl.pyx  rbdl.template.pyx  rbdl_loadmodel.cc  rbdl_ptr_functions.h  rbdl_wrappergen.pyx  rbdlmuscle-wrapper.pyx  rbdlmuscle.pyx  setup.py.cmake  setup.py.cmake.orig  test_rbdlmuscle.py  test_wrapper.py  wrappergen.py
python3/: CMakeLists.txt  rbdl.pyx  setup.py.cmake
share/: FindRBDL.cmake  RBDLCasadiConfig.cmake.in  RBDLConfig.cmake.in  rbdl-casadi.pc.cmake  rbdl.pc.cmake
spatial_v1/: AddBody.m  CreateBody.m  CreateJoint.m  FDab.m  FDcrb.m  FDf.m  HandC.m  SingleChain.m  benchmark_test.m  customfloat.m  customtest.m  customtest3d.m  customtest3dtreefloat.m  floatbase.m  jcalc.m  jcalc3d.m
src/: ArticulatedFigure.cc  ArticulatedFigure.h  Body.cc  Body.h  Constraint_BodyToGroundPosition.cc  Constraint_Contact.cc  Constraint_Loop.cc  Constraints.cc  ConstraintsLibrary.cc  Contacts.cc  Contacts.h  Dynamics.cc  Dynamics.h  Dynamics_experimental.h  Dynamics_stdvec.h  Joint.cc  Joint.h  Kinematics.cc  Kinematics.h  Kinematics_stdvec.h  Logging.cc  Logging.h  MatrixAddons.h  Model.cc  Model.h  SimpleMath.h  SimpleMathFixed.h  SpatialAlgebra.h  SpatialAlgebraOperators.h  Visualization.h  cmlwrapper.h  compileassert.h  main.cc  mathutils.cc  mathutils.h  mathwrapper.h  rbdl.h  rbdl_config.h.cmake  rbdl_eigenmath.h  rbdl_errors.cc  (+8 more)
src/SimpleMath/tests/: CMakeCache.txt  CMakeLists.txt  TestSimpleMathDynamic.cc  TestSimpleMathFixed.cc  TestSimpleMathMixed.cc  test_main.cc
tests/: ArticulatedFigureTests.cc  BodyTests.cc  BodyToGroundConstraintTests.cc  CMakeLists.txt  CalcAccelerations.cc  CalcAccelerationsTests.cc  CalcVelocities.cc  CalcVelocitiesTests.cc  CompositeRigidBodyTests.cc  Contacts.cc  ContactsTests.cc  CustomConstraintsTests.cc  CustomJointMultiBodyTests.cc  CustomJointSingleBodyTests.cc  CustomJointTests.cc  DynamicsTests.cc  ErrorTests.cc  Fixtures.h  FloatingBaseTests.cc  ForwardDynamicsConstraintsExternalForces.cc  Human36Fixture.h  ImpulsesTests.cc  InverseDynamicsTests.cc  InverseDynamicsWithConstraintsTests.cc  InverseKinematicsTests.cc  Kinematics.cc  KinematicsTests.cc  LoopConstraintsTests.cc  LoopConstraintsTestsNew.cc  MathTests.cc  ModelTests.cc  MultiDofTests.cc  PendulumModels.h  PendulumModelsNew.h  ScrewJointTests.cc  SparseFactorizationTests.cc  SpatialAlgebra.cc  SpatialAlgebraTests.cc  SphericalJointTests.cc  TwolegModelTests.cc  (+3 more)
(+142 files in other folders)
