PROJECT ( abagui )

CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

# Needed for UnitTest++
LIST( APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMake )

# Perform the proper linking
SET (CMAKE_SKIP_BUILD_RPATH FALSE)
SET (CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
SET (CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
SET (CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

# The QT Interface
SET( QT_USE_QTXML TRUE )
SET( QT_USE_QTOPENGL TRUE )
SET( QT_WRAP_CPP TRUE )
FIND_PACKAGE (Qt4)
FIND_PACKAGE (OpenGL)

IF ( QT_FOUND )
	ADD_DEFINITIONS (${QT_DEFINITIONS})

	INCLUDE (${QT_USE_FILE})

	SET ( abaMainWindow_UIS
		ui/abaMainWindow.ui
		)
	
	QT4_WRAP_UI (abaMainWindow_UIS_H ${abaMainWindow_UIS})

	SET ( abaQtApp_SRCS
		src/qtmain.cc
		src/abaQtApp.cc
		src/glwidget.cc
		src/modeldrawing.cc
		src/glprimitives.cc
		)

	QT4_WRAP_CPP ( abaQtApp_MOC_SRCS
		src/abaQtApp.h
		src/glwidget.h
		)

	ADD_EXECUTABLE ( abagui
		${abaQtApp_SRCS}
		${abaQtApp_MOC_SRCS}
		${abaMainWindow_UIS_H}
	)

 	INCLUDE_DIRECTORIES (${QT_INCLUDE_DIR})
 	INCLUDE_DIRECTORIES (${QT_INCLUDE_DIR}/QtOpenGL)
	INCLUDE_DIRECTORIES (${CMAKE_CURRENT_BINARY_DIR})
	INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR})
	INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR}/src)
	INCLUDE_DIRECTORIES ( libfigure )
  INCLUDE_DIRECTORIES ( include )

  SET_TARGET_PROPERTIES ( ${PROJECT_EXECUTABLES} PROPERTIES
    LINKER_LANGUAGE CXX
		INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib" 
  )

  TARGET_LINK_LIBRARIES ( abagui
		${QT_LIBRARIES}
		${OPENGL_LIBRARIES}
		aba	
  )

	INSTALL (TARGETS abagui
	RUNTIME DESTINATION bin
	LIBRARY DESTINATION lib
	)
ENDIF ( QT_FOUND )
