CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

SET ( RBDL_ADDON_BALANCE_VERSION_MAJOR 0 )
SET ( RBDL_ADDON_BALANCE_VERSION_MINOR 0 )
SET ( RBDL_ADDON_BALANCE_VERSION_PATCH 0 )

SET ( RBDL_ADDON_BALANCE_VERSION 
	${RBDL_ADDON_BALANCE_VERSION_MAJOR}.${RBDL_ADDON_BALANCE_VERSION_MINOR}.${RBDL_ADDON_BALANCE_VERSION_PATCH}
)

PROJECT (RBDL_ADDON_BALANCE VERSION ${RBDL_ADDON_BALANCE_VERSION})

LIST( APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMake )

SET_TARGET_PROPERTIES ( ${PROJECT_EXECUTABLES} PROPERTIES
		LINKER_LANGUAGE CXX
	)

INCLUDE_DIRECTORIES ( 
	${CMAKE_CURRENT_BINARY_DIR}/include/rbdl
)

SET(BALANCE_SOURCES 
	BalanceToolkit.cc
	BalanceToolkit.h
	balance.h
)

SET(BALANCE_HEADERS
	balance.h
	BalanceToolkit.h
)

IF (RBDL_BUILD_STATIC)
	ADD_LIBRARY ( rbdl_balance-static STATIC ${BALANCE_SOURCES} )
	SET_TARGET_PROPERTIES ( rbdl_balance-static PROPERTIES PREFIX "lib")
	SET_TARGET_PROPERTIES ( rbdl_balance-static PROPERTIES OUTPUT_NAME "rbdl_balance")

	TARGET_LINK_LIBRARIES (
		rbdl_balance-static
		rbdl-static
	)

	INSTALL (TARGETS rbdl_balance-static  
		RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
		ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
		)
ELSE (RBDL_BUILD_STATIC)
	ADD_LIBRARY ( rbdl_balance SHARED ${BALANCE_SOURCES} )
	SET_TARGET_PROPERTIES ( rbdl_balance PROPERTIES
		VERSION ${RBDL_VERSION}
		SOVERSION ${RBDL_SO_VERSION}
  )

	TARGET_LINK_LIBRARIES (
		rbdl_balance
		rbdl
		)

	INSTALL (TARGETS rbdl_balance  
		RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
		LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
		)
ENDIF (RBDL_BUILD_STATIC)

FILE ( GLOB headers 
	"${CMAKE_CURRENT_SOURCE_DIR}/*.h"
	)

INSTALL ( FILES ${BALANCE_HEADERS} 
	DESTINATION 
	${CMAKE_INSTALL_INCLUDEDIR}/rbdl/addons/balance 
	)
